set(_doxypress_dir ${PROJECT_SOURCE_DIR}/cmake)
include(../cmake/AddDocs.cmake)

# _doxypress_project_load(DoxypressTest1.json)
function(assert_same str1 str2)
    if (NOT "${str1}" STREQUAL "${str2}")
        message(SEND_ERROR "`${str1}` is not the same as `${str2}`")
    endif ()
endfunction()

function(assert_list_contains list1 el)
    if (NOT "${el}" IN_LIST list1)
        message(SEND_ERROR "${el} is not contained in ${list1}")
    endif ()
endfunction()

add_executable(main main.cc)
set_target_properties(main PROPERTIES EXCLUDE_FROM_ALL 1)
target_include_directories(main PUBLIC include4 include5)

if (NOT DEFINED DOXYPRESS_SKIP_TEST OR NOT DOXYPRESS_SKIP_TEST)
    message(STATUS "Running tests...")
    include(TestTPA.cmake)
    include(TestJSON.cmake)
    include(TestCreateTargets.cmake)
    include(TestParams.cmake)
    include(TestAddDocs.cmake)
    # include(TestFindAddDocs.cmake)
endif()